--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "doc": "doc",
     "demo": "demo",
     "tiles": "tiles",
-    "src": "src"
+    "src": "src",
     "test": "test"
   },
   "scripts": {
